fixed font-awesome vertical-align in chrome

--- a/app/views/css/_font-awesome.sass
+++ b/app/views/css/_font-awesome.sass
@@ -80,7 +80,7 @@ ul.icons
     .icon-large:before,
     .icon-large:before
       /* 1.5 increased font size for icon-large * 1.25 width
-      vertical-align: initial
+      vertical-align: middle
       //      width: 1.5*1.25em;
 
 /*  Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
