--- a/app/views/css/main.sass
+++ b/app/views/css/main.sass
@@ -205,11 +205,12 @@ footer
   text-align: center
   margin-left: 0.65em
   color: $grayLight
+  vertical-align: middle
   *
     color: inherit
   i
     width: 12px
-    line-height: 0
+    height: auto
   a:hover
     @include single-text-shadow
 
